--- a/templates/base.html
+++ b/templates/base.html
@@ -78,6 +78,11 @@
                                     class="text-lg"
                                     >Code Playground</a
                                 >
+                                <a 
+                                    href="{{ url_for('achievements') }}"
+                                    class="text-lg"
+                                    >Achievements</a
+                                >
                                 <a
                                     href="{{ url_for('logout') }}"
                                     class="text-lg"
