--- a/templates/profile.html
+++ b/templates/profile.html
@@ -148,7 +148,7 @@
             </div>
 
             <!-- Back to Courses Button -->
-            <div class="mt-8">
+            <div class="mt-4 flex justify-center p-2">
                 <a href="{{ url_for('courses') }}" class="btn btn-primary w-50"
                     >Back to Courses</a
                 >
