quiz answer rendering fix

--- a/templates/quiz_ans.html
+++ b/templates/quiz_ans.html
@@ -92,9 +92,9 @@
                         <li>
                             <div class="card bg-base-100 shadow-lg">
                                 <div class="card-body">
-                                    <span class="card-title text-lg markdown-content">
+                                    <p class="card-title text-lg markdown-content">
                                     Q {{ loop.index }}. {{ q.Question | markdown | safe }}
-                                    </span>
+                                    </p>
                                     <hr class=" my-2" />
                                     <div class="space-y-2">
                                                             {% for i in range(4) %}
